# the_test_fixer_warden

./: .gitignore  README.md  getyourlifeinorder.code-workspace  package-lock.json  package.json  playwright.config.ts  pyproject.toml  test_warden.yaml  test_warden.yaml.example
demo-app/: package-lock.json
demo-app/src/: App.css  App.jsx  CartPage.css  CartPage.jsx  LoginPage.css  LoginPage.jsx  index.css
e2e/: cart.spec.ts  login.spec.ts
scripts/: break_selectors.sh  restore_selectors.sh
src/test_warden/: __init__.py  cli.py  config.py  models.py  tracing.py
src/test_warden/adapters/: __init__.py  base.py  runner.py
src/test_warden/analyzer/: __init__.py  html_parser.py  selector_finder.py
src/test_warden/capture/: __init__.py  playwright_capture.py
src/test_warden/graph/: workflow.py
src/test_warden/healing/: __init__.py  gemini_healer.py  gemini_playwright_healer.py  playwright_healer.py
src/test_warden/network/: __init__.py  har_parser.py
src/test_warden/plugins/: __init__.py  capture.py
src/test_warden/vision/: __init__.py  gemini_client.py  prompts.py
tests/sample_e2e/: README.md  test_checkout.py  test_login.py
